Minor change in formatting

--- a/AI4Tw1_Introduction.ipynb
+++ b/AI4Tw1_Introduction.ipynb
@@ -29,14 +29,14 @@
         "id": "ywKY9yrF4t-3"
       },
       "source": [
-        "##About Jupyter Notebook\n",
+        "## About Jupyter Notebook\n",
         "\n",
         "Jupyter Notebook is an interactive coding environment for writing and running Python code. It supports live, cell-by-cell code execution, saving results, and adding documentation, making it ideal for learning, analysis, and collaboration.\n",
         "\n",
         "You can run Jupyter Notebook with Google Colab online, or on your own computer.\n",
         "\n",
         "\n",
-        "##About Python\n",
+        "## About Python\n",
         "\n",
         "Python is a powerful yet beginner-friendly programming language known for simplicity, readability, and broad applications in data analysis, web development, and AI.\n",
         "\n",
@@ -57,7 +57,7 @@
         "id": "pLfVuPNTOXRq"
       },
       "source": [
-        "##1. Importing Modules: The Toolbox\n",
+        "## 1. Importing Modules: The Toolbox\n",
         "\n",
         "In programming, there are many different \"toolboxes\" contain ready-made tools for specific tasks. In Python, we \"import\" these tools from libraries.\n",
         "\n",
@@ -88,7 +88,7 @@
         "id": "c81MMFKaPN2Y"
       },
       "source": [
-        "##2. Variables: The Storage Boxes\n",
+        "## 2. Variables: The Storage Boxes\n",
         "\n",
         "Think of variables as \"storage boxes\" where you can keep information.\n",
         "\n",
@@ -121,7 +121,7 @@
         "id": "my6p80AwQVCo"
       },
       "source": [
-        "##3. Print: Showing Results\n",
+        "## 3. Print: Showing Results\n",
         "\n",
         "To understand what is happening in our program, we can use ```print()``` to display something.\n",
         "\n",
@@ -148,7 +148,7 @@
         "id": "-mx8P_GERJ-6"
       },
       "source": [
-        "##4. Conditional Statements: Making Decisions\n",
+        "## 4. Conditional Statements: Making Decisions\n",
         "\n",
         "Conditional statements decide what to do based on certain conditions.\n",
         "\n",
@@ -175,7 +175,7 @@
         "id": "q6Jq6tB747Ou"
       },
       "source": [
-        "##5. List: A Shelf of Storage Boxes\n",
+        "## 5. List: A Shelf of Storage Boxes\n",
         "\n",
         "Imagine a list as a shelf with many boxes. Each box can hold one item, and you can quickly access them by their position (index)."
       ]
@@ -209,7 +209,7 @@
         "id": "hhcXiMKmBm1h"
       },
       "source": [
-        "##6. Loop: Repeating for Each Item</h2>\n",
+        "## 6. Loop: Repeating for Each Item</h2>\n",
         "\n",
         "A ```for``` loop repeats an action for each item in a group, like checking each student's homework in a class."
       ]
@@ -239,7 +239,7 @@
         "id": "z86DonnKEaS7"
       },
       "source": [
-        "##Putting it all together!\n",
+        "## Putting them all together!\n",
         "\n",
         "We will create 10000 random points inside a 1×1 box. For each point:\n",
         "\n",
@@ -312,7 +312,7 @@
         "id": "1KN_kGf57ug5"
       },
       "source": [
-        "##Challenge!\n",
+        "## Challenge!\n",
         "\n",
         "Estimate the value of π using the number of blue points and the total number of points. Calculate and print the result."
       ]
