--- a/FML1w1_Iris-decision-tree-classifier.ipynb
+++ b/FML1w1_Iris-decision-tree-classifier.ipynb
@@ -2,6 +2,13 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<a href=\"https://colab.research.google.com/github/harrycslau/AI4Teachers-assignments/blob/master/FML1w1_Iris-decision-tree-classifier.ipynb\" target=\"_parent\"><img src=\"https://colab.research.google.com/assets/colab-badge.svg\" alt=\"Open In Colab\"></a>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "metadata": {
     "hide_input": false
    },
